<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nombre_label"
            android:id="@+id/textView" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etNombreUbicacion" android:layout_below="@+id/textView" android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/latitud_label"
            android:id="@+id/textView2" android:layout_below="@+id/etNombreUbicacion" android:layout_alignParentLeft="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etLatitud" android:layout_below="@+id/textView2" android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/longitud_label"
            android:id="@+id/textView3" android:layout_below="@+id/etLatitud" android:layout_alignParentLeft="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etLongitud" android:layout_below="@+id/textView3" android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar_message"
            android:id="@+id/btAceptar"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView" />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar_message"
            android:id="@+id/btCancelar" android:layout_alignBottom="@+id/btAceptar" android:layout_toRightOf="@+id/btAceptar"/>
</RelativeLayout>