<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/btGuardarPosicion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btguardarposicion_label" />
        
        <Button
            android:id="@+id/btVerMiPosicion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btvermiposicion_label" />

        <Button
            android:id="@+id/btDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btdistancia_label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    
	   <fragment xmlns:android="http://schemas.android.com/apk/res/android"
	        android:id="@+id/map"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        class="com.google.android.gms.maps.MapFragment"/>
   
	</LinearLayout>

</LinearLayout>
